@@ -1,6 +1,7 @@
 /*
  *  dyntypes.h - interface for dynamically derived value container class types
  *  Copyright (C) 2001, Ron Steinke
+ *            (C) 2001-2005 Alistair Riddoch
  *
  *  This library is free software; you can redistribute it and/or
  *  modify it under the terms of the GNU Lesser General Public
