@@ -1,6 +1,7 @@
 /*
  *  variable.cpp - implementation of the typeless value container.
  *  Copyright (C) 2001, Stefanus Du Toit, Joseph Zupko
+ *            (C) 2003-2006 Alistair Riddoch
  *
  *  This library is free software; you can redistribute it and/or
  *  modify it under the terms of the GNU Lesser General Public
