@@ -1,6 +1,7 @@
 /*
  *  variable.h - interface for typeless value container class
  *  Copyright (C) 2001, Stefanus Du Toit, Joseph Zupko
+ *            (C) 2001-2006 Alistair Riddoch
  *
  *  This library is free software; you can redistribute it and/or
  *  modify it under the terms of the GNU Lesser General Public
